-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.8, 6.9, 6.10
-
None
-
-
e5d7d1136 (dev), 1d7e1c860 (6.9), 6aac28da3 (6.8), bdfb8fb6c (tqtc/lts-6.5)
For example
qandroidvideoframebuffer.cpp:40:20: error: variable length arrays in C++ are a Clang extension [-Werror,-Wvla-cxx-extension] 40 | int rowStrides[numberPlanes];
- blocks
-
QTQAINFRA-6479
Switch to use NDK 27 LTS in CI
-
- Closed
-
- is required for
-
QTBUG-127804
Pulse - NDK27 builds with Qt on one host and application builds on same host
-
- Closed
-
| For Gerrit Dashboard: QTBUG-134135 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 627924,4 | Android: Replace variable-length arrays with fixed-size arrays | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 628151,2 | Android: Replace variable-length arrays with fixed-size arrays | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 628240,2 | Android: Replace variable-length arrays with fixed-size arrays | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 628427,3 | Android: Replace variable-length arrays with fixed-size arrays | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |