Android: Replace variable-length arrays with fixed-size arrays

NDK r27c introduced a new build error due to the use of variable-length
arrays (VLAs), which are not standard in C++. This update replaces VLAs
with constexpr-based fixed-size arrays to ensure compatibility with the
new NDK version.

Fixes: QTBUG-134135
Change-Id: I94ec40c6a7d31cc1635e636174eeae6c0e944e84
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit e5d7d11364c38b1e76290764dfdbbebb4a11e4d8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 1d7e1c86022451c56e17656964e2488ca2ece777)
(cherry picked from commit 6aac28da3ff88d2576b7039d7bcd9f89079fe744)