src/plugins/multimedia/ffmpeg/qandroidvideoframebuffer.cpp
@@ -35,11 +35,13 @@ bool QAndroidVideoFrameBuffer::parse(const QJniObject &frame)
         return false;
 
     const int numberPlanes = planes.size();
+    Q_ASSERT(numberPlanes <= MAX_PLANES);
+
     // create and populate temporary array structure
-    int pixelStrides[numberPlanes];
-    int rowStrides[numberPlanes];
-    int bufferSize[numberPlanes];
-    char *buffer[numberPlanes];
+    int pixelStrides[MAX_PLANES];
+    int rowStrides[MAX_PLANES];
+    int bufferSize[MAX_PLANES];
+    char *buffer[MAX_PLANES];
 
     auto resetPlane = [&](int index) {
         if (index < 0 || index > numberPlanes)
@@ -51,7 +53,7 @@ bool QAndroidVideoFrameBuffer::parse(const QJniObject &frame)
         buffer[index] = nullptr;
     };
 
-    for (qsizetype index = 0; index < planes.size(); ++index) {
+    for (qsizetype index = 0; index < numberPlanes; ++index) {
         auto plane = planes.at(index);
         if (!plane.isValid()) {
             resetPlane(index);
